almost finished with Yan

--- a/localization/english/missions/yan_missions_l_english.yml
+++ b/localization/english/missions/yan_missions_l_english.yml
@@ -67,7 +67,7 @@
 
  #Events
  me_yan_1_title: "$yan_missions_task_1$"
- me_yan_1_desc: "Although many advisors had hoped to catch the ear of [ROOT.GetCountry.GetRuler.GetName], the [ROOT.GetCountry.GetAdjective] [ROOT.GetCountry.GetRulerTitle] was not interested in the fawning words of sycophants that would tell [ROOT.GetCountry.GetRuler.GetHerHim] everything that [ROOT.GetCountry.GetRuler.GetSheHe] wanted to hear. Only the honest word of a true servant would suffice, and yet everyone standing before the throne only sought to enrich themselves or change their status at court.\n\nAfter many hours of listening to the speeches of fools, [ROOT.GetCountry.GetRuler.GetFirstName] called forth #E Wei Guo#! to stand before the throne, asking the minister what was the best step forward for [ROOT.GetCountry.GetName].\n\n'Seek the counsel of learned men first and let it be known that you value knowledge, and sages far wiser than I shall appear at your doorstep'."
+ me_yan_1_desc: "Although many advisors had hoped to catch the ear of [ROOT.GetCountry.GetRuler.GetName], the [ROOT.GetCountry.GetAdjective] [ROOT.GetCountry.GetRulerTitle] was not interested in the fawning words of sycophants that would tell [ROOT.GetCountry.GetRuler.GetHerHim] everything that [ROOT.GetCountry.GetRuler.GetSheHe] wanted to hear. Only the honest word of a true servant would suffice, and yet everyone standing before the throne only sought to enrich themselves or change their status at court.\n\nAfter many hours of listening to the speeches of fools, [ROOT.GetCountry.GetRuler.GetFirstName] called forth #E Wei Guo#! to stand before the King, asking the minister what was the best step forward for [ROOT.GetCountry.GetName].\n\n'Seek the counsel of learned men first and let it be known that you value knowledge, and sages far wiser than I shall appear at your doorstep'."
  me_yan_1.a: "I hope what you say is true, [SCOPE.sCharacter('guo_character').GetFirstName]..."
 
  me_yan_2_title: "$yan_missions_task_2$"
@@ -83,7 +83,7 @@
  me_yan_4.a: "May victory ride with you, Ju Xin, and with us"
  
  me_yan_400_title: "$yan_missions_task_4$"
- me_yan_400_desc: "Remembering the words of Wei Guo, [ROOT.GetCountry.GetRuler.GetName] sent forth messengers all throughout the cities and crossroads of [ROOT.GetCountry.GetName], proclaiming that the mighty [ROOT.GetCountry.GetAdjective] [ROOT.GetCountry.GetRulerTitle] would pay gold and silver to men of talent that would be willing to serve the state.\n\nIt came as no surprise, then, when a scholar of some renown named #E Yan Zou#! appeared at the gates of [ROOT.GetCountry.GetCapital.GetName], with nothing to his name save the tattered cloak on his back and an empty rice bowl that he carried in both hands.\n\nRaising the bowl above his head, Yan yelled out in a loud voice that he would soon eat at the side of the King, so great was his desire to serve [ROOT.GetCountry.GetRuler.GetFirstName] - he promised to prove himself through hard work and would settle for nothing else than a seat at the royal table."
+ me_yan_400_desc: "Remembering the words of Wei Guo, [ROOT.GetCountry.GetRuler.GetName] sent forth messengers all throughout the cities and crossroads of [ROOT.GetCountry.GetName], proclaiming that the mighty [ROOT.GetCountry.GetAdjective] [ROOT.GetCountry.GetRulerTitle] would pay gold and silver to men of talent that would be willing to serve the state.\n\nIt came as no surprise, then, when a scholar of some renown named #E Yan Zou#! appeared at the gates of [ROOT.GetCountry.GetCapital.GetName], with nothing to his name save the tattered cloak on his back and an empty rice bowl that he carried in both hands.\n\nRaising the bowl above his head, Yan yelled out in a loud voice that he would soon eat at the side of the King, so great was his desire to serve [ROOT.GetCountry.GetRuler.GetFirstName] - he promised to prove himself through hard work and would settle for nothing less than a seat at the royal table."
  me_yan_400.a: "I have heard your name, Yan Zou...and we shall see about that!"
  
  me_yan_401_title: "$yan_missions_task_4$"
@@ -114,52 +114,52 @@
  me_yan_10_desc: "What a dark day for the [GetCountry('QII').GetName] - did the gods see fit to warn their people that their day of judgment was at hand? Where were the prophets, carrying the words of warning upon their lips? But now it is too late, and the mournful song of desolation fills the smoke-filled air of the burning provinces.\n\nThe forces of [GetCountry('YAN').GetName] have cast the treacherous Qi from their core lands - even the legendary city of [GetProvince('(int32)8504').GetName], their pride and joy, has fallen to the Yan armies, who now fly the banner of the House of [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] above its damaged ramparts. The Qi will never be able to recover from such a devastating loss, and their days are truly numbered."
  me_yan_10.a: "I shall show them no mercy, but shall press on to their doom!"
 
- me_yan_11_title:0 "$yan_missions_task_11$"
- me_yan_11_desc:0 ""
- me_yan_11.a:0 ""
+ me_yan_11_title: "$yan_missions_task_11$"
+ me_yan_11_desc: "In a generous display, [ROOT.GetCountry.GetRuler.GetName] has commissioned a set of #E Royal Bronzewares#! to be constructed by the master metalworkers living in [ROOT.GetCountry.GetCapital.GetName].\n\nIt is the hope of [ROOT.GetCountry.GetRuler.GetFirstName] that the common people will praise the House of [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] for its largesse."
+ me_yan_11.a: "Our civilization is thriving, growing in prestige every day"
 
- me_yan_12_title:0 "$yan_missions_task_12$"
- me_yan_12_desc:0 ""
- me_yan_12.a:0 ""
+ me_yan_12_title: "$yan_missions_task_12$"
+ me_yan_12_desc: "News from the front! Our triumphant levies have driven back the weak forces of [GetCountry('JSN').GetName], seizing the valuable peninsula that controls the flow of trade in and out of the #E Sinus Bohai#!.\n\nThe omens have spoken, all but guaranteeing eternal victory for the armies of [ROOT.GetCountry.GetRuler.GetName], whom the gods have seen fit to make into a mighty conqueror!"
+ me_yan_12.a: "There are more battles that we will fight together - are you with me?"
 
- me_yan_13_title:0 "$yan_missions_task_13$"
- me_yan_13_desc:0 ""
- me_yan_13.a:0 ""
+ me_yan_13_title: "$yan_missions_task_13$"
+ me_yan_13_desc: "With our fortifications against [GetCountry('ZHA').GetName] complete, we are now able to strike against our enemies from a position of strength, and the gods have rewarded the brilliant strategems of [ROOT.GetCountry.GetRuler.GetName] by giving us large swathes of their territory.\n\nOur levies are grateful, knowing that in the worst case scenario, they will be able to fall back to the fortresses that we have built in our western territories, but for now, the occupation of Zhao will continue."
+ me_yan_13.a: "And yet they shall continue to march forward..."
 
- me_yan_14_title:0 "$yan_missions_task_14$"
- me_yan_14_desc:0 ""
- me_yan_14.a:0 ""
+ me_yan_14_title: "$yan_missions_task_14$"
+ me_yan_14_desc: "In a display of [ROOT.GetCountry.GetAdjective] superiority against our fallen enemies, [ROOT.GetCountry.GetRuler.GetName] has issued the fateful command that the treasures of [GetProvince('(int32)8504').GetName] must be relocated to [ROOT.GetCountry.GetCapital.GetName]. Even now, as the wailing of the shocked citizens fills the streets of Linzi, our soldiers are methodically emptying the shrines of their holy objects.\n\nThe vengeful [ROOT.GetCountry.GetRulerTitle] did not listen to the heartfelt pleas of the Qi elites that desperately begged to keep their sacred treasures, arguing that this move would break the spirit of their countrymen forever."
+ me_yan_14.a: "That is the intention..."
 
- me_yan_15_title:0 "$yan_missions_task_15$"
- me_yan_15_desc:0 ""
- me_yan_15.a:0 ""
+ me_yan_15_title: "$yan_missions_task_15$"
+ me_yan_15_desc: "The lands held by the [GetCountry('QII').GetName] have been all but been ruined, and plague and famine have quickly swept through the broken lands that were recently occupied by the Yan armies. The peasants of the region, hoping that the worst days are over for them, are quietly trying to rebuild their broken lives, struggling to pay the local indemnities that the newly-installed Yan overseers are demanding.\n\nWhere there once stood a bustling village, full of life and people, only the harsh cawing of corvids can be heard...\n\n[GetCountry('QII').GetName] has fallen, destroyed forevermore..."
+ me_yan_15.a: "And yet we must continue to march south..."
 
- me_yan_16_title:0 "$yan_missions_task_16$"
- me_yan_16_desc:0 ""
- me_yan_16.a:0 ""
+ me_yan_16_title: "$yan_missions_task_16$"
+ me_yan_16_desc: "It will please you, [ROOT.GetCountry.GetRuler.GetName], to discover that maritime trade is booming throughout [ROOT.GetCountry.GetName]. Our expansion of the port and commercial districts has done wonders to encourage local investment by the elites, and it is said that many of the largest Trading Guilds have sent merchants into the port cities in order to help facilitate economic growth."
+ me_yan_16.a: "You are right - this bit of news makes me quite happy, indeed"
 
- me_yan_17_title:0 "$yan_missions_task_17$"
- me_yan_17_desc:0 ""
- me_yan_17.a:0 ""
+ me_yan_17_title: "$yan_missions_task_17$"
+ me_yan_17_desc: "Although we have chastened the northern barbarians by teaching them a lesson that they shall not forget for generations to come, [ROOT.GetCountry.GetRuler.GetName] remains always mindful of the capriciousness of the gods, who bless a man one day with gifts beyond mortal comprehension before taking it all away.\n\nAfter personally inspecting the northern hinterlands, [ROOT.GetCountry.GetRuler.GetFirstName] issued the order that a #E Northern Wall#! be constructed, one that would take advantage of the terrain - if any raiders from the steppes hope to come into [ROOT.GetCountry.GetName] unmolested, then they are in for the surprise of their lives."
+ me_yan_17.a: "This wall will keep us safe from the hordes - you will see"
 
- me_yan_18_title:0 "$yan_missions_task_18$"
- me_yan_18_desc:0 ""
- me_yan_18.a:0 ""
+ me_yan_18_title: "$yan_missions_task_18$"
+ me_yan_18_desc: "In a brilliant masterstroke of foreign policy, [ROOT.GetCountry.GetRuler.GetName] has sent spies and informers throughout the lands to our east with full coin purses and the mission to spread dissension. It is the hope of our [ROOT.GetCountry.GetRulerTitle] that we will be able to play the contentious locals against each other, and as our messengers clandestinely fan the flames of the local feuds and disputes, the easterners will remain divided, thus becoming puppets for [ROOT.GetCountry.GetCapital.GetName] to control."
+ me_yan_18.a: "I am pulling your strings and you don't even know it...fools."
 
- me_yan_19_title:0 "$yan_missions_task_19$"
- me_yan_19_desc:0 ""
- me_yan_19.a:0 ""
- me_yan_19.b:0 ""
+ me_yan_19_title: "$yan_missions_task_19$"
+ me_yan_19_desc: "Frustrated by the reports of our military scouts, who have repeatedly claimed that the armies of [GetCountry('QIN').GetName] are exceptionally trained and on a permanent war footing, [ROOT.GetCountry.GetRuler.GetName] has decided upon a murderous plot in order to cause chaos in the south; the assassination of [GetCountry('QIN').GetRuler.GetName].\n\nIt is only a matter of time before the Qin send their forces northward, and unless [ROOT.GetCountry.GetRuler.GetFirstName] can frustrate their plans before they are set into motion, a ruinous war threatens to take away all that we have struggled to achieve.\n\nAs the King pondered this irrevocable course of action and what was to be done, an exiled nobleman named #E Ke Jing#!, who had lost everything to the Qin armies, arrived in [ROOT.GetCountry.GetCapital.GetName]. Ke, desiring to see the Qin suffer as much as [ROOT.GetCountry.GetRuler.GetFirstName] did, promised to set everything in motion, but asked for the funds to do so."
+ me_yan_19.a: "Fifty talents should be enough to do the job..."
+ me_yan_19.b: "Give Ke Jing everything he needs for success"
  
- me_yan_1900_title:0 "$yan_missions_task_19$"
- me_yan_1900_desc:0 ""
- me_yan_1900.a:0 ""
- me_yan_1900.b:0 ""
+ me_yan_1900_title: "$yan_missions_task_19$"
+ me_yan_1900_desc: "All of the preparations have been made, and Ke Jing will ride for the court of the Qin ruler in the morning. Ke will pretend to be fleeing from the Yan armies, who will be launching a 'suprise invasion', and will claim to have a map that reveals their troop movements. An exquisite dagger has been poisoned and placed inside of this map scroll, where it will be smuggled into the presence of the Qin and hopefully find its resting place in the King's heart.\n\nAs Ke is gathering the last of his things, he has sent a request to [ROOT.GetCountry.GetRuler.GetName], asking for some bodyguards to accompany him - he appears to be getting a little nervous and wants some experienced muscle at his back."
+ me_yan_1900.a: "I believe we can spare a little of our expertise"
+ me_yan_1900.b: "Everything that you ask for is yours!"
  
- me_yan_1901_title:0 "$yan_missions_task_19$"
- me_yan_1901_desc:0 ""
- me_yan_1901.a:0 ""
- me_yan_1901.b:0 ""
+ me_yan_1901_title: "$yan_missions_task_19$"
+ me_yan_1901_desc: "A message from Ke Jing has been smuggled to [ROOT.GetCountry.GetRuler.GetName], brought by plum wine merchants that snuck across the border without being questioned.\n\nKe Jing reports that all is well and that things are moving according to plan, and yet there has been a hiccup - the Qin are beginning to act suspicious, with some claiming that he is not a real nobleman at all, but a spy sent by one of the Qin's many enemies.\n\nIn order to throw the secret police off of his back, Ke is asking for an infusion of funds - he wants to spread some coin around [GetProvince('(int32)8313').GetName], perhaps hold a feast; he claims this will allow him to blend into high society better and perhaps get close to the Qin ruler."
+ me_yan_1901.a: "By the gods, Ke asks for too much - send him what we can"
+ me_yan_1901.b: "In for a penny, in for a pound...we can't back down at this point"
  
  me_yan_1902_title:0 "$yan_missions_task_19$"
  me_yan_1902_desc:0 ""
