only need one more Yan event, basically done

--- a/localization/english/missions/yan_missions_l_english.yml
+++ b/localization/english/missions/yan_missions_l_english.yml
@@ -1,9 +1,9 @@
 ﻿l_english:
 
- yan_missions:0 "Yin Yan"
- yan_missions_DESCRIPTION:0 "Mission description"
- yan_missions_CRITERIA_DESCRIPTION:0 "This mission will be completed when"
- yan_missions_BUTTON_TOOLTIP:0 ""
+ yan_missions: "The Last Lord Standing"
+ yan_missions_DESCRIPTION: "All around us, the twin promises of death and subjugation; whether delivered at the hands of an ambitious southern King or brought alongside a vast steppe horde army from the northern wastelands, only the gods know. Yet it is clear that #E Yan#! faces a dark and treacherous road ahead, with few friends to walk alongside us.\n\nWhile some would tremble in the face of such daunting odds of survival, [ROOT.GetCountry.GetRuler.GetName] scoffs at the danger, secure in [ROOT.GetCountry.GetRuler.GetHerHis] vision for the future. While many of the kingdoms around us fall to the wayside, destroyed by internal dissension and foreign wars of aggression, [ROOT.GetCountry.GetRuler.GetFirstName] stands alone - Yan will not succumb to the darkness, but will rise above it all!"
+ yan_missions_CRITERIA_DESCRIPTION: "This mission will be completed when #E Yan#! has rebuilt its core territories, subdued the threats on the western and eastern borders, and have destroyed our arch-rivals to the south."
+ yan_missions_BUTTON_TOOLTIP: "May my sword always strike true..."
 
  #Missions
 
@@ -157,30 +157,30 @@
  me_yan_1900.b: "Everything that you ask for is yours!"
  
  me_yan_1901_title: "$yan_missions_task_19$"
- me_yan_1901_desc: "A message from Ke Jing has been smuggled to [ROOT.GetCountry.GetRuler.GetName], brought by plum wine merchants that snuck across the border without being questioned.\n\nKe Jing reports that all is well and that things are moving according to plan, and yet there has been a hiccup - the Qin are beginning to act suspicious, with some claiming that he is not a real nobleman at all, but a spy sent by one of the Qin's many enemies.\n\nIn order to throw the secret police off of his back, Ke is asking for an infusion of funds - he wants to spread some coin around [GetProvince('(int32)8313').GetName], perhaps hold a feast; he claims this will allow him to blend into high society better and perhaps get close to the Qin ruler."
+ me_yan_1901_desc: "A message from Ke Jing has been smuggled to [ROOT.GetCountry.GetRuler.GetName], brought by plum wine merchants that snuck across the Qin border without being questioned by their guards.\n\nKe Jing reports that all is well and that things are moving according to plan, and yet there has been a hiccup - the Qin are beginning to act suspicious, with some claiming that he is not a real nobleman at all, but a spy sent by one of the Qin's many enemies.\n\nIn order to throw the secret police off of his back, Ke is asking for an infusion of funds - he wants to spread some coin around [GetProvince('(int32)8313').GetName], perhaps hold a feast; he claims this will allow him to blend into high society better and perhaps get close to the Qin ruler."
  me_yan_1901.a: "By the gods, Ke asks for too much - send him what we can"
  me_yan_1901.b: "In for a penny, in for a pound...we can't back down at this point"
  
- me_yan_1902_title:0 "$yan_missions_task_19$"
- me_yan_1902_desc:0 ""
- me_yan_1902.a:0 ""
- me_yan_1902.b:0 ""
+ me_yan_1902_title: "$yan_missions_task_19$"
+ me_yan_1902_desc: "[ROOT.GetCountry.GetRuler.GetName], we have received another letter from Ke Jing! After spending vast sums in [GetCountry('QIN').GetCapital.GetName] and pulling some strings, Ke was able to ingratiate himself with the local elites and has finally secured a meeting at the Royal Court of the Qin.\n\nKe Jing told [GetCountry('QIN').GetRuler.GetName], King of Qin, that he has taken the head of a famous Qin traitor and would like to personally present it to the Son of Heaven, who has agreed to see him!\n\nThe fated moment is almost at hand. By the time that we are reading these words, Ke Jing should have gone to court with his servant, Qin Wuyang."
+ me_yan_1902.a: "I hope Ke knows what he is doing..."
+ me_yan_1902.b: "I have a good feeling about the two of you..."
  
- me_yan_1903_title:0 "$yan_missions_task_19$"
- me_yan_1903_desc:0 ""
- me_yan_1903.a:0 ""
+ me_yan_1903_title: "$yan_missions_task_19$"
+ me_yan_1903_desc: "Word of the assassination of [GetCountry('QIN').GetRuler.GetName] reached the streets of [ROOT.GetCountry.GetCapital.GetName] long before any messages from Ke Jing arrived - the news spread like wildfire along the trade routes; it seems that the mysterious death of the Qin ruler is the only thing that people want to talk about.\n\nAs always, the reports are muddied, a bit of truth mixed in with a bit of falsehood; it is said that [GetCountry('QIN').GetRuler.GetFirstName] was felled by an army of assassins that climbed the walls of his palace one night, whereas others claim he was forced to drink a large bowl of mercury at the point of a spear. Some even believe that a demon, a vengeful spirit, possessed the Qin King and forced him to jump off of the walls of [GetCountry('QIN').GetCapital.GetName].\n\nWhat no one is saying, however, is that a Yan assassin managed to get close to the Qin King - it seems that no one suspects [ROOT.GetCountry.GetRuler.GetName] of any involvement."
+ me_yan_1903.a: "What a miraculous day for Yan!"
  
- me_yan_1904_title:0 "$yan_missions_task_19$"
- me_yan_1904_desc:0 ""
- me_yan_1904.a:0 ""
+ me_yan_1904_title: "$yan_missions_task_19$"
+ me_yan_1904_desc: "It has been weeks since anyone has heard from Ke Jing, and [ROOT.GetCountry.GetRuler.GetName] is starting to fear for the worst. Although the Yan [ROOT.GetCountry.GetRulerTitle] was bracing [ROOT.GetCountry.GetRuler.GetHerHim]self for bad news, when it finally came, it still caused [ROOT.GetCountry.GetRuler.GetFirstName] to tremble in fear.\n\nSimply put, the assassination attempt was a complete, embarrassing failure. Ke Jing and Qin Wuyang acted like country bumpkins at court, wandering around wide-eyed and open-mouthed as they gawped at the splendor around them. To make matters worse, Qin Wuyang was apparently sweating like a mare in labor, soaking his clothes and raising the suspicions of the Qin guards, who refused to allow him in the presence of [GetCountry('QIN').GetRuler.GetName].\n\nRealizing that the ruse was up, Ke Jing at least attempted to strike down [GetCountry('QIN').GetRuler.GetFirstName], and it is said that he chased the Qin King, knife in hand, as he tried to hide behind a pillar - an almost comical scene.\n\nMoments later, Ke's head would be split in half by Qin soldiers, and the broken bodies of both Ke and Qin are hanging outside the main gates of [GetCountry('QIN').GetCapital.GetName].\n\nNeedless to say, the Qin are incredibly angry at us..."
+ me_yan_1904.a: "May the gods of the underworld torment them both, the idiots!"
  
  me_yan_1905_title:0 "$yan_missions_task_19$"
  me_yan_1905_desc:0 ""
  me_yan_1905.a:0 ""
  
- me_yan_1906_title:0 "$yan_missions_task_19$"
- me_yan_1906_desc:0 ""
- me_yan_1906.a:0 ""
+ me_yan_1906_title: "$yan_missions_task_19$"
+ me_yan_1906_desc: "[ROOT.GetCountry.GetRuler.GetName], your spies have caught two noblemen from [GetCountry('YAN').GetName] attempting to infiltrate our court. They claimed to have the head of a Qin rebel, #E Fan Wuqi#!, and asked if they could present it to your Majesty. But these were lies, as the poisoned dagger in their possession revealed. The two simpletons tried to smuggle the weapon inside the Palace by hiding it in a scroll box - how stupid do they think we are?\n\nThe executioner was sent for, and as the two men suffered the death of a thousand cuts, they told us everything; they were sent by [GetCountry('YAN').GetRuler.GetName] in hopes of destabilizing our country, for they admit that they have no hopes of victory on the battlefield and must resort to skullduggery to achieve their foul goals.\n\nThankfully, our guards handled this situation before it got out of hand, but we thought that you should know that you have many foes."
+ me_yan_1906.a: "My rage against the Yan burns like a thousand suns!"
 
 
  #Modifiers
@@ -193,27 +193,26 @@
  assassinate_qin_as_yan: "Assassinated Emperor"
  northern_wall_yan: "Built Northern Wall"
  northern_wall_yan_province_mod: "Northern Wall"
- desc_yan_donghu_strategies: "TODO"
- desc_yan_coalition_mod: "TODO"
- desc_yan_iron_mod: "TODO"
- desc_byjing_yan_mod: "TODO"
- desc_qinged_qi: "TODO"
- desc_assassinate_qin_as_yan: "TODO"
- desc_northern_wall_yan: "TODO"
- desc_northern_wall_yan_province_mod: "TODO"
- desc_rebuilt_yan_mod: "TODO"
+ desc_yan_donghu_strategies: "We have extensive knowledge of the Donghu territories, thanks to a local informer, and our levies are prepared to fight them in the hills."
+ desc_yan_coalition_mod: "Our prestige and military strength are shining, thanks to the mighty coalition that our leader has formed."
+ desc_yan_iron_mod: "The largesse from our mines and mountains have gifted our armies with the raw metals they need to forge superior weapons."
+ desc_byjing_yan_mod: "Our capital city shines above all others; truly the cradle of future Empire."
+ desc_qinged_qi: "A martial spirit of victory has seized the soul of our people, who have destroyed the corrupt Qi."
+ desc_assassinate_qin_as_yan: "Foreign agents have managed to assassinate the Qin ruler, plunging the kingdom into a period of chaos."
+ desc_northern_wall_yan: "Our engineers have learned a great deal by building the northern fortifications; lessons that they will apply to our entire nation."
+ desc_northern_wall_yan_province_mod: "This province is protected by the expansive fortifications built by the Yan, which are colloquially known as the 'Northern Wall'."
+ desc_rebuilt_yan_mod: "Our countrymen are thriving, thanks to the rebuilding efforts championed by our ruler."
  
  #Treasure:
  yan_royal_bronzeware: "Royal Bronzeware"
- desc_yan_royal_bronzeware: "TODO"
+ desc_yan_royal_bronzeware: "In a sign of Yan cultural supremacy, these bronze dishes were commissioned by the ruler in order to show off the skill of its craftsmen."
  
  #Tooltips
- yan_missions_task_9_claims_tt: "TODO"
- yan_missions_task_8_claims_tt: "TODO"
- yan_missions_task_9_claims_tt: "TODO"
- yan_missions_task_10_claims_tt: "TODO"
- yan_missions_task_12_claims_tt: "TODO"
- yan_missions_task_13_claims_tt: "TODO"
+ yan_missions_task_8_claims_tt: "We will receive claims on the #Y Liaoxi#!, #Y Liadong#!, and #Y Lelang#! areas."
+ yan_missions_task_9_claims_tt: "We will receive claims on the #Y Shanggu#!, #Y Zuo#!, #Y Dai#!, #Y Hengshan#!, #Y Zhongshan#!, #Y Julu#! and #Y Hejian#! areas."
+ yan_missions_task_10_claims_tt: "We will receive claims on the #Y Beihai#!, #Y Donglai#!, #Y Langya#!, #Y Taishan#!, #Y Dong#!, #Y Jiyin#! and #Y Shanyang#! areas."
+ yan_missions_task_12_claims_tt: "We will receive claims on the #Y Mahan#! and #Y Mahan South#! areas."
+ yan_missions_task_13_claims_tt: "We will receive claims on every province in the #Y Bing#! region."
  yan_missions_task_2_all_rebuilt_provinces_get: "All rebuilt provinces will get:"
  yan_missions_task_19_attempt_assassination: "We will attempt an assassination plot on the Emperor of Qin."
  yan_missions_task_2_two_reservois_in_zhuo_yuyang_bohai_shanggu: "We need at least two reservoirs in the Areas of Zhuo, Yuyang, Bohai or Shanggu."
