Clop, clop, clop (Xiongnu)

--- a/localization/english/missions/xiongnu_missions_ti_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_ti_l_english.yml
@@ -160,6 +160,7 @@
  me_xiongnu_01_1800_title: ""
  me_xiongnu_01_1800_desc: ""
  me_xiongnu_01_1800.a: ""
+ me_xiongnu_01_1800.b: ""
  
  me_xiongnu_01_1801_title: ""
  me_xiongnu_01_1801_desc: ""
@@ -224,3 +225,4 @@
  xiongnu_missions_01_task_2_tt_family_check: "Our ruler's family is the Luandi family."
  xiongnu_missions_01_task_3_spouse_with_reqs_exists: "Our ruler has a spouse younger than 30 years, who has Xiongnu culture and Tengri religion."
  xiongnu_missions_01_task_2_claimant: "A new claimant will appear."
+ xiongnu_missions_1_task_20_claims: "TODO CLAIMS"
